--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,6 +52,15 @@
         <item name="fontWeight">700</item>
     </style>
 
+    <style name="Head1_32" parent="TextAppearance.AppCompat">
+        <item name="font">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:textColor">@color/gray600</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="lineHeight">32sp</item>
+        <item name="fontWeight">700</item>
+    </style>
+
     <style name="Head2" parent="TextAppearance.AppCompat">
         <item name="font">@font/spoqa_han_sans_neo_regular</item>
         <item name="android:textColor">@color/black</item>
