add recyclerview in checklist

--- a/app/src/main/res/layout/activity_setting_contact.xml
+++ b/app/src/main/res/layout/activity_setting_contact.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/setting_con_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/contact_list"/>
+        tools:listitem="@layout/list_contact"/>
 
     <ImageButton
         android:id="@+id/setting_plus"
