--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -57,32 +57,32 @@ tools:context=".sos.AmbulanceActivity">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/amb_recycler_view"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_marginBottom="10dp"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/amb_top"
-    app:layout_constraintBottom_toTopOf="@id/amb_notice"
-    tools:listitem="@layout/ambulance_list"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/amb_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/amb_top"
+        app:layout_constraintBottom_toTopOf="@id/amb_notice"
+        tools:listitem="@layout/list_ambulance"/>
 
-<TextView
-    android:id="@+id/amb_notice"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="24dp"
-    android:layout_marginEnd="24dp"
-    android:layout_marginBottom="24dp"
-    android:text="@string/sos_amb_notice"
-    android:textSize="14sp"
-    android:textAppearance="@style/Body2"
-    android:textColor="@color/gray300"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/amb_notice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/sos_amb_notice"
+        android:textSize="14sp"
+        android:textAppearance="@style/Body2"
+        android:textColor="@color/gray300"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
