--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -80,31 +80,14 @@
         app:tabTextColor="@color/gray400"
         android:background="#00FFFFFF"
         app:tabSelectedTextColor="@color/gray600"
-        app:tabTextAppearance="@style/Body1" >
+        app:tabTextAppearance="@style/Body1"/>
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="30dp"
-                android:layout_height="19dp"
-                android:text="@string/info_tab_basic"/>
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="58dp"
-                android:layout_height="19dp"
-                android:text="@string/info_tab_addl"/>
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="76dp"
-                android:layout_height="19dp"
-                android:text="@string/info_tab_mine"/>
-
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/chklist_tabContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/chklist_top"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/chklist_tabContent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/chklist_top"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
