--- a/app/src/main/res/layout/activity_setting_favorite.xml
+++ b/app/src/main/res/layout/activity_setting_favorite.xml
@@ -7,8 +7,9 @@
     tools:context=".setting.SettingFavoriteActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header_favorite"
         android:layout_width="match_parent"
-        android:layout_height="165dp"
+        android:layout_height="120dp"
         android:background="#4DEDEDED"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -47,91 +48,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-        <HorizontalScrollView
-            android:id="@+id/setting_fav_scroll"
-            android:layout_width="0dp"
-            android:layout_height="37dp"
-            android:gravity="center"
-            android:overScrollMode="never"
-            android:scrollbars="none"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
-                android:orientation="horizontal">
-
-                <android.widget.Button
-                    android:id="@+id/setting_fav_all"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/setting_fav_btn_custom"
-                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                    android:text="@string/all"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-                <android.widget.Button
-                    android:id="@+id/setting_fav_aed"
-                    android:layout_width="75dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/setting_fav_btn_custom"
-                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                    android:text="@string/aed"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toEndOf="@id/setting_fav_all"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <android.widget.Button
-                    android:id="@+id/setting_fav_she"
-                    android:layout_width="45dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/setting_fav_btn_custom"
-                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                    android:text="@string/shelter"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toEndOf="@id/setting_fav_aed"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <android.widget.Button
-                    android:id="@+id/setting_fav_eme"
-                    android:layout_width="45dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/setting_fav_btn_custom"
-                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                    android:text="@string/emergency"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toEndOf="@id/setting_fav_she"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <android.widget.Button
-                    android:id="@+id/setting_fav_pha"
-                    android:layout_width="67dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/setting_fav_btn_custom"
-                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                    android:text="@string/pharmacy"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toEndOf="@id/setting_fav_eme"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/setting_tab_layout"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toTopOf="@id/container_favorite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header_favorite"
+        android:elevation="1dp"
+        app:tabMode="fixed"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/container_favorite"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_tab_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
