--- a/app/src/main/res/layout/fragment_checklist_basic.xml
+++ b/app/src/main/res/layout/fragment_checklist_basic.xml
@@ -9,7 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ch_basic_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="true"
         android:overScrollMode="never"
         tools:listitem="@layout/list_checklist"
