--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -3,12 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/aed_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Space
         android:id="@+id/layout_space"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/aed_appbar"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/info_aed_layout"
@@ -97,32 +103,13 @@
                 android:paddingLeft="24dp"
                 android:paddingRight="24dp">
 
-                <LinearLayout
+                <ImageView
                     android:id="@+id/info_iv_aed_desc_number"
                     android:layout_width="24dp"
                     android:layout_height="1118dp"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_ellipse_1"
-                        android:layout_marginBottom="190dp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_ellipse_2"
-                        android:layout_marginBottom="388dp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_disclaimer"
-                        android:layout_marginBottom="444dp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_ellipse_3" />
-
-                </LinearLayout>
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/info_iv_aed_desc_number"
+                    android:src="@drawable/info_iv_aed_desc_number" />
                 <Space
                     android:layout_width="12dp"
                     android:layout_height="1181dp"/>
@@ -287,14 +274,13 @@
                 </LinearLayout>
 
             </LinearLayout>
-            <TextView
-                android:id="@id/info_iv_copyright"
+            <ImageView
+                android:id="@+id/info_iv_copyright"
+                android:contentDescription="@string/info_iv_copyright"
                 android:layout_width="341dp"
                 android:layout_height="14dp"
-                android:gravity="center_horizontal|top"
-                android:textSize="12sp"
-                android:textColor="#979797"
-                android:text="@string/info_iv_copyright"/>
+                android:src="@drawable/info_iv_copyright"
+                android:layout_gravity="center_horizontal" />
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="49dp"/>
