--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayoutEarthquake"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/earthquake_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
     <ImageView
         android:id="@+id/iv_bar_design"
         android:contentDescription="@string/info_iv_bar_design"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/earthquake_appbar"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/info_iv_bar_design"/>
+        android:src="@drawable/info_iv_bar_design"
+        />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/layout_scroll"
@@ -24,46 +32,63 @@
             android:paddingLeft="@dimen/default_padding"
             android:paddingRight="@dimen/default_padding">
             <TextView
-                android:id="@+id/info_tv_forestfire_header"
+                android:id="@+id/info_tv_earthquake_header"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
                 style="@style/disaster"
-                android:text="@string/info_tb_forrestfire"/>
+                android:text="@string/info_tb_earthquake"/>
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="66dp"/>
+                android:layout_height="36dp"/>
             <ImageView
-                android:id="@+id/info_btn_prevention"
+                android:id="@+id/info_btn_wheninside"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
-                android:src="@drawable/info_btn_prevention"
-                android:contentDescription="@string/info_tv_prevention"/>
+                android:layout_height="wrap_content"
+                android:src="@drawable/info_btn_wheninside"
+                android:contentDescription="@string/info_tv_wheninside"/>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="32dp"/>
             <TextView
-                android:id="@+id/info_tv_forestfire_body1"
+                android:id="@+id/info_tv_earthquake_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="29dp"
+                android:textSize="18sp"
+                android:letterSpacing="-0.02"
+                android:textColor="@color/gray600"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                android:translationY="-3.6sp"
+                android:lineSpacingExtra="7sp"
+                android:gravity="top"
+                android:text="@string/info_tv_earthquake_subtitle"/>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="23dp"/>
+            <TextView
+                android:id="@+id/info_tv_earthquake_body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/disaster_body"
-                android:text="@string/info_tv_forestfire_body1"/>
+                android:text="@string/info_tv_earthquake_body"/>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="88dp"/>
             <ImageView
+                android:id="@+id/info_btn_whenoutside"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:src="@drawable/info_btn_whenoccur"/>
+                android:src="@drawable/info_btn_whenoutside"
+                android:contentDescription="@string/info_tv_whenoutside"/>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="32dp"/>
             <TextView
-                android:id="@+id/info_tv_forestfire_body2"
+                android:id="@+id/info_tv_earthquake_body2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/disaster_body"
-                android:text="@string/info_tv_forrestfire_body2"/>
+                android:text="@string/info_tv_earthquake_body2"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
