--- a/app/src/main/res/layout/activity_typhoon.xml
+++ b/app/src/main/res/layout/activity_typhoon.xml
@@ -3,12 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/typhoon_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
     <ImageView
         android:id="@+id/iv_bar_design"
         android:contentDescription="@string/info_iv_bar_design"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/typhoon_appbar"
         app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/info_iv_bar_design"/>
 
@@ -24,46 +30,30 @@
             android:paddingLeft="@dimen/default_padding"
             android:paddingRight="@dimen/default_padding">
             <TextView
-                android:id="@+id/info_tv_forestfire_header"
+                android:id="@+id/info_tv_typhoon_header"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
                 style="@style/disaster"
-                android:text="@string/info_tb_forrestfire"/>
+                android:text="@string/info_tb_typhoon"/>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="66dp"/>
             <ImageView
-                android:id="@+id/info_btn_prevention"
+                android:id="@+id/info_btn_whenoccur"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:src="@drawable/info_btn_prevention"
-                android:contentDescription="@string/info_tv_prevention"/>
+                android:src="@drawable/info_btn_whenoccur"
+                android:contentDescription="@string/info_tv_whenoccur"/>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="32dp"/>
             <TextView
-                android:id="@+id/info_tv_forestfire_body1"
+                android:id="@+id/info_tv_typhoon_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/disaster_body"
-                android:text="@string/info_tv_forestfire_body1"/>
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="88dp"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="42dp"
-                android:src="@drawable/info_btn_whenoccur"/>
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="32dp"/>
-            <TextView
-                android:id="@+id/info_tv_forestfire_body2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/disaster_body"
-                android:text="@string/info_tv_forrestfire_body2"/>
+                android:text="@string/info_tv_typhoon_body"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
