--- a/app/src/main/res/layout/activity_urban_fire.xml
+++ b/app/src/main/res/layout/activity_urban_fire.xml
@@ -1,69 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/urbanFire_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/iv_bar_design"
-        android:contentDescription="@string/info_iv_bar_design"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/info_iv_bar_design"
+        android:src="@drawable/info_iv_bar_design"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/info_iv_bar_design"/>
+        app:layout_constraintTop_toBottomOf="@id/urbanFire_appbar" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/layout_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/iv_bar_design">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="@dimen/default_padding"
             android:paddingRight="@dimen/default_padding">
+
             <TextView
-                android:id="@+id/info_tv_forestfire_header"
+                android:id="@+id/info_tv_urbanfire_header"
+                style="@style/disaster"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
-                style="@style/disaster"
-                android:text="@string/info_tb_forrestfire"/>
+                android:text="@string/info_tb_fire" />
+
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="66dp"/>
+                android:layout_height="66dp" />
+
             <ImageView
                 android:id="@+id/info_btn_prevention"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:src="@drawable/info_btn_prevention"
-                android:contentDescription="@string/info_tv_prevention"/>
+                android:contentDescription="@string/info_tv_prevention"
+                android:src="@drawable/info_btn_prevention" />
+
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="32dp"/>
+                android:layout_height="32dp" />
+
             <TextView
-                android:id="@+id/info_tv_forestfire_body1"
+                android:id="@+id/info_tv_urbanfire_body1"
+                style="@style/disaster_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/disaster_body"
-                android:text="@string/info_tv_forestfire_body1"/>
+                android:text="@string/info_tv_fire_body1" />
+
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="88dp"/>
+                android:layout_height="203dp" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:src="@drawable/info_btn_whenoccur"/>
+                android:src="@drawable/info_btn_whenoccur" />
+
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="32dp"/>
+                android:layout_height="32dp" />
+
             <TextView
-                android:id="@+id/info_tv_forestfire_body2"
+                android:id="@+id/info_tv_fire_body2"
+                style="@style/disaster_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/disaster_body"
-                android:text="@string/info_tv_forrestfire_body2"/>
+                android:text="@string/info_tv_fire_body2" />
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
