--- a/app/src/main/res/layout/item_cpr_adult.xml
+++ b/app/src/main/res/layout/item_cpr_adult.xml
@@ -17,12 +17,47 @@
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
 
-            <ImageView
+            <LinearLayout
                 android:id="@+id/info_iv_cpr_desc_numbering"
                 android:layout_width="24dp"
                 android:layout_height="2340dp"
-                android:contentDescription="@string/info_iv_cpr_desc_numbering"
-                android:src="@drawable/info_iv_cpr_desc_numbering" />
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_1"
+                    android:layout_marginBottom="474dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_2"
+                    android:layout_marginBottom="319dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_3"
+                    android:layout_marginBottom="354dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_4"
+                    android:layout_marginBottom="413dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_5"
+                    android:layout_marginBottom="423dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ellipse_6"
+                    android:layout_marginBottom="189dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_disclaimer" />
+
+            </LinearLayout>
 
             <Space
                 android:layout_width="12dp"
@@ -314,12 +349,14 @@
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="88dp"/>
-                <ImageView
+                <TextView
                     android:id="@id/info_iv_copyright"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/info_iv_copyright"
-                    android:contentDescription="@string/info_iv_copyright"/>
+                    android:layout_width="341dp"
+                    android:layout_height="14dp"
+                    android:gravity="center_horizontal|top"
+                    android:textSize="12sp"
+                    android:textColor="#979797"
+                    android:text="@string/info_iv_copyright"/>
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="64dp"/>
