--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -105,6 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/emptyAedResult"
+        app:layout_constraintVertical_bias="0.25"
         android:visibility="gone"
         android:textColor="@color/gray400"
         app:layout_constraintBottom_toBottomOf="parent"
