--- a/app/src/main/res/layout/fragment_checklist_basic.xml
+++ b/app/src/main/res/layout/fragment_checklist_basic.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ch_basic_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="24dp"
         android:fillViewport="true"
         android:overScrollMode="never"
         tools:listitem="@layout/list_checklist"
