--- a/app/src/main/res/layout/list_checklist.xml
+++ b/app/src/main/res/layout/list_checklist.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <CheckBox
         android:id="@+id/cb_chk"
@@ -31,8 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginBottom="22dp"
         android:textAppearance="@style/Body2"
         android:textColor="@color/gray400"
-        app:layout_constraintTop_toBottomOf="@id/cb_chk"/>
+        app:layout_constraintTop_toBottomOf="@id/cb_title"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
